--- a/Calcolatrice A-S-L/App.config
+++ b/Calcolatrice A-S-L/App.config
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Calcolatrice_A_S_L.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
+    <userSettings>
+        <Calcolatrice_A_S_L.Properties.Settings>
+            <setting name="x" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="y" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="precisione" serializeAs="String">
+                <value>0.001</value>
+            </setting>
+            <setting name="decimali" serializeAs="String">
+                <value>14</value>
+            </setting>
+        </Calcolatrice_A_S_L.Properties.Settings>
+    </userSettings>
 </configuration>
