--- a/Calcolatrice A-S-L/Calcolatrice A-S-L.csproj
+++ b/Calcolatrice A-S-L/Calcolatrice A-S-L.csproj
@@ -34,8 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AlphaBlendTextBox">
-      <HintPath>..\..\..\..\Desktop\Nuova cartella (2)\AlphaBlendTextBox.dll</HintPath>
+    <Reference Include="AlphaBlendTextBox, Version=1.0.1270.35793, Culture=neutral">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\AlphaBlendTextBox.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -191,6 +192,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\omino1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="AlphaBlendTextBox.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
