--- a/Calcolatrice A-S-L/Calcolatrice A-S-L.csproj
+++ b/Calcolatrice A-S-L/Calcolatrice A-S-L.csproj
@@ -195,6 +195,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AlphaBlendTextBox.dll" />
+    <None Include="Resources\calc2.jpg" />
+    <None Include="Resources\calc1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
